packages/kit/test/apps/basics/src/routes/errors/errorpage.svelte
<h1 id="error-message">This is custom a errorpage</h1>
<div>From error to error one discovers the entire truth.</div>
